# Conway_SDL2

./: .gitignore  2025-03-03-Note-12-16.xopp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PROTOCOL.md  README.md  a.out  cmake_install.cmake  diagrama_multiplayer.xopp  dibujos.xopp  dotted_line.cpp  grid.cpp  imgui.ini  install_dependencies.sh  lastSave.txt  main.cpp  print_grid.cpp  start_wallpaper.sh  test_server[1]_include.cmake  ui.cpp
clay/: clay.h  clay_renderer_SDL2.c
pruebas/: a.out  lectura_prueba.cpp  prueba_clay.cpp  texto.cpp
pruebas/imgui/: example.cpp  imgui.ini  programa
pruebas/resources/: clay-video-demo.c
scr/: README.md  appState.h  client.cpp  dotted_line.cpp  dotted_line.h  grid.cpp  grid.h  main.cpp  main_menu.cpp  ncurses_viewer.cpp  packet_logger.h  patterns.h  print_grid.cpp  server.cpp  ui.cpp  wallpaper.cpp
tests/: CMakeLists.txt  a.out  server.cpp  test_server.cpp
